styles.css
/* ... */
/* ----- */
/* 
    TO DO:
    select the body by its tag name
*/
/* ----- */
body{
    box-sizing: border-box;
    background-color: var(--lt-gray);
}

/* --------------- */
/* HEADER/FOOTER SHARED STYLES */
/* --------------- */
/* ----- */
/* 
    TO DO:
    select the header and footer by tag name
*/
/* ----- */
header, footer{
    padding: 2rem 1rem;
    background-color: var(--white);
    width: 100%;
    max-width: 1200px;
    box-shadow: var(--box-shadow-sm);
}

/* --------------- */
/* HEADER STYLES */
/* --------------- */
/* ----- */
/* 
    TO DO:
    select the header only, by tag name
*/
/* ----- */
header{
    margin: 0 auto 2rem auto;
}

/* --------------- */
/* HEADING STYLES */
/* --------------- */
/* ----- */
/* 
    TO DO:
    select the h1 tag by tag name
*/
/* ----- */
h1{
    font-size: 2em;
    margin: 0;
    text-align: center;
}

/* ----- */
/* 
    TO DO:
    select both the h1 and h2 tags on the page by tag name
*/
/* ----- */
h1, h2{
    grid-column: 1/-1;
    text-align: center;
    font-weight: bold;
    letter-spacing: 1px;
}

/* ----- */
/* 
    TO DO:
    select the h2 tags by tag name
*/
/* ----- */
h2{
    font-size: 1.75rem;
    margin: 0.25rem;
}

/* ----- */
/* 
    TO DO:
    select the h3 tags by tag name
*/
/* ----- */
h3{
    font-size: 1.5rem;
    margin: 0.25rem;
}

/* --------------- */
/* UNORDERED LIST STYLES */
/* --------------- */
/* ----- */
/* 
    TO DO:
    select all of the unordered lists on the page using the tag name selector
*/
/* ----- */
ul{
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    gap: 12px;
}

/* --------------- */
/* LINK AND LINK HOVER STYLES */
/* --------------- */
/* ----- */
/* 
    TO DO:
    select all of the links on the page using the tag name selector
*/
/* ----- */
a{
    color: var(--blue);
}

/* ----- */
/* 
    TO DO:
    select the links on the page when a user hovers over them using the tag name and pseudo-class  selector
*/
/* ----- */
a:hover{
    text-decoration: none;
}

/* ----- */
/* 
    TO DO:
    select the links on the page when they have keyboard focus using the tag name and pseudo-class  selector
*/
/* ----- */
a:focus{
    text-decoration: none;
    outline: 4px solid var(--dv-med-blue);
    outline-offset: 2px;
}

/* --------------- */
/* MAIN STYLES */
/* --------------- */
/* ----- */
/* 
    TO DO:
    select the main element by tag name
*/
/* ----- */
main{
    width: 100%;
    max-width: 1200px;
    margin: 2rem auto;
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
    grid-gap: 1rem;
}

/* --------------- */
/* MAIN SECTION STYLES */
/* --------------- */
/* ----- */
/* 
    TO DO:
    select the sections on the page that are direct descendants to the main by tag names and using the direct descendant selector
*/
/* ----- */
main > section{
    display: block;
    width: calc(100% - 2rem);
    max-width: calc(500px - 2rem);
    min-height: 300px;
    margin: 0 auto;
    padding: 1rem;
    background-color: var(--white);
    box-shadow: var(--box-shadow-sm);
}

/* --------------- */
/* PARAGRAPH STYLES */
/* --------------- */
/* ----- */
/* 
TO DO:
select the paragraph elements by tag name
*/
/* ----- */
p{
    padding: 1rem; 
    font-size: 1.2rem;
    max-width: 65ch;
    margin: 0 auto;
}

/* --------------- */
/* IMAGE STYLES */
/* --------------- */
/* ----- */
/* 
    TO DO:
    select the images and SVGs by tag names
*/
/* ----- */
img, svg{
    display: block;
    width: 100%;
    height: auto;
}

/* --------------- */
/* SPAN STYLES */
/* --------------- */
/* ----- */
/* 
TO DO:
select all of the spans by tag name
*/
/* ----- */
span{
    display: block;
}

/* ------------------------------------ */
/* STYLES BY SECTION IN MAIN */
/* ------------------------------------ */
/* --------------- */
/* IMAGE STYLES SECTION CONTENT STYLES */
/* --------------- */
/* ----- */
/* 
    TO DO:
    select the h2 in the first section using the ID, tag name, and child/descendant selectors
*/
/* ----- */
#image h2{
    padding: 12px 0;
    background-color: var(--blue);
    color: var(--white);
}

/* --------------- */
/* NAVIGATION SECTION CONTENT STYLES */
/* --------------- */
/* ----- */
/* 
    TO DO:
    select the h2 in the second section using the ID, tag name, and child/descendant selectors
*/
/* ----- */
#nav h2{
    padding: 12px 0;
    background-color: var(--green);
    color: var(--white);
}

/* ----- */
/* 
    TO DO:
    select the unordered list in the navigation using the tag names and child/descendant selector
*/
/* ----- */
nav ul{
    display: block;
    list-style-type: none;
    padding: 0;
    text-align: center;
}

/* ----- */
/* 
    TO DO:
    select the list items in the navigation using the tag names and child/descendant selector
*/
/* ----- */
nav li{
    display: block;
    width: 100%;
}

/* ----- */
/* 
    TO DO:
    select the anchor tags in the navigation using the tag names and child/descendant selectors
*/
/* ----- */
nav a{
    display: block;
    width: 90%;
    margin: 16px auto;
    text-decoration: none;
    text-align: center;
    font-weight: bold;
    padding: 16px;
    font-size: 1.2rem;
    background-color: var(--green);
    color: var(--white);
    box-shadow: var(--box-shadow-lg);
    letter-spacing: 1px;
}

/* ----- */
/* 
    TO DO:
    select the anchor tags in the navigation on hover using the tag names, pseudo-class, and child/descendant selectors
*/
/* ----- */
nav a:hover{
    background-color: var(--white);
    color: var(--green);
    box-shadow: var(--box-shadow-sm);
}

/* --------------- */
/* FORM SECTION CONTENT STYLES */
/* --------------- */
/* ----- */
/* 
    TO DO:
    select the h2 in the third section using the class name selector
*/
/* ----- */
.third-h2{
    padding: 12px 0;
    background-color: var(--dv-fuchsia);
    color: var(--white);
}
/* ... */

